# DQ-video-processing-project

./: Build_DEPRECATED.txt  CSIR_VPP.iss  ChangeLog.txt  KnownIssues.txt  cleanup.py  license.txt  makepackage.bat  zip_exclude.txt
Source/RtvcLib/: CMakeLists.txt
Source/RtvcLib/DirectShow/: CSettingsInterface.cpp  CSettingsInterface.h  CStatusInterface.cpp  CStatusInterface.h  CodecControlInterface.h  ComTypeDefs.h  CommonDefs.h  CustomBaseFilter.cpp  CustomBaseFilter.h  CustomMediaTypes.h  DirectShowHelper.cpp  IFileInfoSourceInterface.h  MultiIOBaseFilter.cpp  MultiIOBaseFilter.h  MultiIOOutputPin.cpp  NotifyCodes.h  SettingsInterface.h  StatusInterface.h  VideoMixingBase.cpp  VideoMixingBase.h  stdafx.cpp  stdafx.h
Source/RtvcLib/GeneralUtils/: Conversion.h  MeasurementTable.cpp  MeasurementTable.h  StringTokeniser.h  StringUtil.h
Source/RtvcLib/Image/: OverlayMem2Dv2.cpp  OverlayMem2Dv2.h  PicConcatRGB24Impl.cpp  PicConcatRGB24Impl.h  PicConcatRGB32Impl.cpp  PicConcatRGB32Impl.h  PicRotateRGB24Impl.cpp  PicRotateRGB24Impl.h  PicRotateRGB32Impl.cpp  PicRotateRGB32Impl.h  PicScalerARGB32Impl.cpp  PicScalerARGB32Impl.h  PicScalerARGB32ImplA.cpp  PicScalerARGB32SSE.h  PicScalerBase.h  PicScalerRGB24Impl.cpp  PicScalerRGB24Impl.h  PicScalerRGB24ImplA.cpp  PicScalerRGB32Impl.cpp  PicScalerRGB32Impl.h  PicScalerRGB32ImplA.cpp  PicScalerUYVYImpl.cpp  PicScalerUYVYImpl.h  PicScalerYUV420PImpl.cpp  PicScalerYUV420PImpl.h  PicScalerYUYVImpl.cpp  RealRGB24toYUV420ConverterImpl2Ver16.cpp  RealRGB32toYUV420Converter.cpp  RealRGB32toYUV420Converter.h  RowScallerARGB32_Win32.asm  RowScallerARGB32_x64.asm  RowScallerMMX_Win32.asm  RowScallerMMX_x64.asm  RowScallerSSE_Win32.asm  RowScallerSSE_x64.asm  ToolsCPU_Win32.asm  ToolsCPU_x64.asm  raster_MSVC.asm  raster_MSVC64.asm
Source/RtvcLib/TestImage/: RotateTesters.cpp  RotateTesters.h  ScaleTesters.cpp  ScaleTesters.h  TestImage.cpp
src/: CMakeLists.txt
src/codecs/: CMakeLists.txt
src/codecs/H264v2/src/: CMakeLists.txt
src/filters/DirectShow/: CMakeLists.txt  DirectShowFilterGuids.h  DirectShowFilters.vsprops  DirectShowFiltersDebug.vsprops  ThinMediaPipeLine.vsprops
src/filters/DirectShow/AudioMixingFilter/: AudioMixingFilter.cpp  AudioMixingFilter.def  AudioMixingFilter.h  AudioMixingFilter.rc  AudioMixingProperties.h  DLLSetup.cpp  resource.h  stdafx.cpp  stdafx.h
src/filters/DirectShow/CropFilter/: CropFilter.cpp  CropFilter.def  CropFilter.h  CropFilter.rc  CropProperties.h  DLLSetup.cpp  resource.h  stdafx.cpp  stdafx.h
src/filters/DirectShow/FrameSkippingFilter/: DLLSetup.cpp  FrameSkippingFilter.cpp  FrameSkippingFilter.def  FrameSkippingFilter.h  FrameSkippingFilter.rc  FrameSkippingFilter16March2011.cpp  FrameSkippingFilter21Feb2011.cpp  FrameSkippingFilter28Feb2011.cpp  FrameSkippingProperties.h  VersionInfo.h  resource.h  stdafx.cpp  stdafx.h
src/filters/DirectShow/H264DecoderFilter/: CMakeLists.txt  DLLSetup.cpp  H264DecoderFilter.cpp  H264DecoderFilter.def  H264DecoderFilter.h  VersionInfo.h  stdafx.cpp  stdafx.h
src/filters/DirectShow/H264EncoderFilter/: CMakeLists.txt  DLLSetup.cpp  H264EncoderFilter.cpp  H264EncoderFilter.def  H264EncoderFilter.h  H264EncoderFilter.rc  H264EncoderProperties.h  resource.h  stdafx.cpp  stdafx.h
src/filters/DirectShow/H264Source/: DLLSetup.cpp  H264OutputPin.cpp  H264OutputPin.h  H264Properties.h  H264Source.cpp  H264Source.def  H264Source.h  H264Source.rc  resource.h  stdafx.cpp  stdafx.h
src/filters/DirectShow/I420ToRGB24Filter/: CMakeLists.txt  CopyList.txt  DLLSetup.cpp  I420ToRGBFilter.cpp  I420ToRGBFilter.def  I420ToRGBFilter.h  I420ToRGBFilter.rc  I420ToRGBProperties.h  resource.h  stdafx.h
src/filters/DirectShow/OpusDecoderFilter/: DLLSetup.cpp  OpusDecoderFilter.cpp  OpusDecoderFilter.def  OpusDecoderFilter.h  stdafx.cpp  stdafx.h
src/filters/DirectShow/PicInPicFilter/: PicInPicFilter.cpp  PicInPicFilter.h  PicInPicProperties.cpp  PicInPicProperties.h
src/filters/DirectShow/RGBtoI420Filter/: CMakeLists.txt  CopyList.txt  DLLSetup.cpp  RGBtoI420Filter.cpp  RGBtoI420Filter.def  RGBtoI420Filter.h  RGBtoI420Filter.rc  RGBtoI420Properties.h  resource.h  stdafx.cpp  stdafx.h
src/filters/DirectShow/RGBtoYUV420Filter/: DLLSetup.cpp  RGB2YUVProperties.h  RGBtoYUV420Filter.cpp  RGBtoYUV420Filter.def  RGBtoYUV420Filter.h  RGBtoYUV420Filter.rc  resource.h  stdafx.h
src/filters/DirectShow/RotateFilter/: RotateFilter.cpp  RotateFilter.h  RotateProperties.h
src/filters/DirectShow/RtspSinkFilter/: DirectShowNetworkCodecControlInterface.h  DllSetup.cpp  INetworkCodecControlInterface.h  RtspSinkFilter.cpp  RtspSinkFilter.def  RtspSinkFilter.h  RtspSinkFilter.rc  RtspSinkGuids.h  RtspSinkInputPin.cpp  RtspSinkInputPin.h  RtspSinkProperties.h  StepBasedRateController.h  resource.h  stdafx.h
src/filters/DirectShow/RtspSourceFilter/: AsyncRtspClientAdapter.cpp  AsyncRtspClientAdapter.h  AsyncRtspClientSessionManager.cpp  AsyncRtspClientSessionManager.h  DllSetup.cpp  GlobalDefs.cpp  GlobalDefs.h  MediaPacketManager.cpp  MediaPacketManager.h  MediaPacketQueue.cpp  MediaPacketQueue.h  MediaParameterExtractor.cpp  MediaParameterExtractor.h  ReadMe.txt  RtspClientSessionManager.cpp  RtspClientSessionManager.h  RtspProperties.h  RtspSourceFilter.cpp  RtspSourceFilter.def  RtspSourceFilter.h  RtspSourceFilter.rc  RtspSourceOutputPin.cpp  RtspSourceOutputPin.h  RtvcRtpSink.h  resource.h  stdafx.cpp  stdafx.h
src/filters/DirectShow/ScaleFilter/: DLLSetup.cpp  ScaleFilter.cpp  ScaleFilter.def  ScaleFilter.h  ScaleFilter.rc  ScaleProperties.h  resource.h  stdafx.cpp  stdafx.h
src/filters/DirectShow/SkewingFilter/: DLLSetup.cpp  SkewingFilter.cpp  SkewingFilter.def  SkewingFilter.h  SkewingFilter.rc  SkewingProperties.h  resource.h  stdafx.cpp
src/filters/DirectShow/Stereo2MonoFilter/: DLLSetup.cpp  Stereo2MonoFilter.cpp  Stereo2MonoFilter.def  Stereo2MonoFilter.h  Stereo2MonoFilter.rc  (+4 more)
src/libs/DirectShowExt/: CMakeLists.txt  CSettingsInterface.cpp  CSettingsInterface.h  DirectShowHelper.cpp  DirectShowHelper.h  MultiIOBaseFilter.cpp
src/libs/LiveMedia/: Live_versions.txt
(+460 files in other folders)
