#CMakeLists.txt in DirectShow
#ADD_SUBDIRECTORY(AacDecoderFilter)
#ADD_SUBDIRECTORY(AacEncoderFilter)
#ADD_SUBDIRECTORY(AMRDecoderFilter)
#ADD_SUBDIRECTORY(AMREncoderFilter)
# VPP
#ADD_SUBDIRECTORY(AudioMixingFilter)
# VPP
#ADD_SUBDIRECTORY(CropFilter)
#ADD_SUBDIRECTORY(DumpFilter)
# VPP
#ADD_SUBDIRECTORY(FrameSkippingFilter)
#ADD_SUBDIRECTORY(GMFBridge)
IF(BUILD_H263)
#ADD_SUBDIRECTORY(H263DecoderFilter)
#ADD_SUBDIRECTORY(H263EncoderFilter)
#ADD_SUBDIRECTORY(H263SwitchDecoderFilter)
#ADD_SUBDIRECTORY(H263SwitchDecoderSingleFilter)
#ADD_SUBDIRECTORY(H263SwitchEncoderFilter)
# DEPRECATED
# ADD_SUBDIRECTORY(H263SwitchMediaMultiplexer)
ENDIF(BUILD_H263)
#ADD_SUBDIRECTORY(H264Source)
#ADD_SUBDIRECTORY(H264DecoderFilter)
ADD_SUBDIRECTORY(H264EncoderFilter)
#ADD_SUBDIRECTORY(X264EncoderFilter)
#ADD_SUBDIRECTORY(H264SwitchDecoderFilter)
#ADD_SUBDIRECTORY(H264SwitchEncoderFilter)
#ADD_SUBDIRECTORY(I420ToRGB24Filter)
#ADD_SUBDIRECTORY(Live555RtspSinkFilter)
#ADD_SUBDIRECTORY(MM2Demultiplexer)
#ADD_SUBDIRECTORY(MMFDemultiplexerSingle)
#ADD_SUBDIRECTORY(MMFMultiplexer)
# there are build issues with VS2013 when building the mp4 projects
# these need to be built separately when using VS2013
# UPDATE: the build issues seem to have been resolved with the VS service packs
#IF(NOT MSVC12)
#ADD_SUBDIRECTORY(mp4demux)
#ADD_SUBDIRECTORY(mp4mux)
# VPP
IF(OPUS_SUPPORT)
#ADD_SUBDIRECTORY(OpusDecoderFilter)
#ADD_SUBDIRECTORY(OpusEncoderFilter)
ENDIF(OPUS_SUPPORT)
# VPP
#ADD_SUBDIRECTORY(PicInPicFilter)
#ENDIF(NOT MSVC12)
##ADD_SUBDIRECTORY(RemoteXmlpSource)
# VPP
#ADD_SUBDIRECTORY(RGBtoI420Filter)
#DD_SUBDIRECTORY(RGBtoYUV420Filter)
#VPP
#ADD_SUBDIRECTORY(RotateFilter)
IF (BUILD_RTP_PLUS_PLUS_FILTERS)
#ADD_SUBDIRECTORY(RtspSinkFilter)
#ADD_SUBDIRECTORY(SdpSourceFilter)
#ADD_SUBDIRECTORY(SipSinkFilter)
#ADD_SUBDIRECTORY(SipSourceFilter)
ENDIF(BUILD_RTP_PLUS_PLUS_FILTERS)
#ADD_SUBDIRECTORY(RtspSourceFilter)
#ADD_SUBDIRECTORY(SampleWriter)
# VPP
#ADD_SUBDIRECTORY(ScaleFilter)
# VPP
#ADD_SUBDIRECTORY(SkewingFilter)
# VPP
#ADD_SUBDIRECTORY(Stereo2MonoFilter)
# VPP
#ADD_SUBDIRECTORY(TimestampLoggerFilter)
# VPP
#ADD_SUBDIRECTORY(TimingFilter)
# VPP
#ADD_SUBDIRECTORY(UtilityFilter)
# VPP
#ADD_SUBDIRECTORY(VideoMixingFilter)
# VPP
#ADD_SUBDIRECTORY(VirtualCam)
# VPP
#ADD_SUBDIRECTORY(VirtualMic)
# ADD_SUBDIRECTORY(XmlpSourceFilter)
# VPP
IF (ENABLE_X265)
#ADD_SUBDIRECTORY(X265EncoderFilter)
ENDIF (ENABLE_X265)
# VPP
#ADD_SUBDIRECTORY(YUV420ToRGBFilter)
# VPP
#ADD_SUBDIRECTORY(YUV444ToRGBFilter)
# VPP
#ADD_SUBDIRECTORY(YUVSource)
